project grid initial structure

--- a/css/main.css
+++ b/css/main.css
@@ -7480,6 +7480,9 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
 
+html {
+  background: #e3f6f5; }
+
 .card {
   position: absolute;
   opacity: 0; }
