--- a/css/main.css
+++ b/css/main.css
@@ -7479,3 +7479,6 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
+
+#projects {
+  background: #e3f6f5; }
