--- a/css/main.css
+++ b/css/main.css
@@ -7484,7 +7484,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   color: #fff; }
 
 #information {
-  background-image: url("../assets/project-images/catherine-heath-6DWK3rX0J5k-unsplash.jpg");
+  background-image: url("../assets/project-images/catherine-heath-6DWK3rX0J5k-unsplash.webp");
   background-size: cover;
   background-blend-mode: soft-light;
   background-position: center; }
