hero image parallax added

--- a/css/main.css
+++ b/css/main.css
@@ -7487,7 +7487,8 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-image: url("../assets/project-images/catherine-heath-6DWK3rX0J5k-unsplash.webp");
   background-size: cover;
   background-blend-mode: soft-light;
-  background-position: center; }
+  background-position: center;
+  background-attachment: fixed; }
 
 #projects {
   background-color: #227c91; }
