fixed card's upper border radius

--- a/css/main.css
+++ b/css/main.css
@@ -7504,3 +7504,6 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 
 .card {
   border-radius: 6px; }
+  .card .card-image .image {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px; }
