background animation initial implementation

--- a/css/main.css
+++ b/css/main.css
@@ -7485,13 +7485,14 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 
 #information {
   fill: #fff;
-  background-size: 367px 367px;
   background-repeat: repeat;
   background: url("data:image/svg+xml;charset=utf8,%3Csvg id='Layer_1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500' fill-opacity='1' style='enable-background:new 0 0 500 500'%3E%3Cstyle%3E .st1{fill:rgba(255,255,255,1)} %3C/style%3E%3Cpath style='fill:none;stroke:rgba(255,255,255,1);stroke-width:50;stroke-miterlimit:10' d='M-44-184l83 92 83-92 83 92 83-92 83 92 83-92 83 92 83-92'/%3E%3Cpath class='st1' d='M.8 500L-101 387.4l37.2-33.5L.8 425.4l83.1-92 83.2 92 83.2-92 83.1 92 83.2-92 83.2 92 64.6-71.5 37.2 33.5L499.8 500l-83.2-92-83.2 92-83.1-92-83.2 92-83.2-92zM.8 333.3L-101 220.7l37.2-33.4L.8 258.7l83.1-92 83.2 92 83.2-92 83.1 92 83.2-92 83.2 92 64.6-71.4 37.2 33.4-101.8 112.6-83.2-92-83.2 92-83.1-92-83.2 92-83.2-92zM.8 166.6L-101 54.1l37.2-33.5L.8 92 83.9 0l83.2 92 83.2-92 83.1 92 83.2-92 83.2 92 64.6-71.4 37.2 33.5-101.8 112.5-83.2-92-83.2 92-83.1-92-83.2 92-83.2-92z'/%3E%3C/svg%3E"), linear-gradient(to left bottom, #175361, #175361);
-  background-size: cover;
   background-attachment: fixed;
   background-blend-mode: soft-light;
-  background-position: center; }
+  background-size: 150% auto;
+  background-position: top left;
+  animation: background-movement 300s ease-out;
+  animation-iteration-count: 5; }
   #information-column {
     position: relative;
     padding: 0;
@@ -7560,6 +7561,12 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 
 .dark-text {
   color: #175361 !important; }
+
+@keyframes background-movement {
+  0% {
+    background-position: left top; }
+  100% {
+    background-position: right bottom; } }
 
 .card {
   border-radius: 6px; }
