minor animation bug fix

--- a/css/main.css
+++ b/css/main.css
@@ -7522,15 +7522,14 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     padding: .5rem 2rem;
     transition: all 0.2s ease-in; }
     .links ul li a:hover {
-      transform: translateX(0.5rem);
+      transform: translateX(0.3rem);
       box-shadow: 0 0.25rem 0.125rem 0 rgba(0, 0, 0, 0.07); }
     .links ul li a.link-1 {
       background: linear-gradient(70deg, transparent 0%, transparent 50%, #227c91 50%);
       background-size: 250%; }
       .links ul li a.link-1:hover {
         background-position: 100%;
-        color: white;
-        transform: translateX(12px); }
+        color: white; }
     .links ul li a.link-2 {
       background: linear-gradient(70deg, transparent 0%, transparent 50%, #4cbbd5 50%);
       background-size: 250%; }
