--- a/css/main.css
+++ b/css/main.css
@@ -7496,51 +7496,67 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   #information-column {
     position: relative;
     padding: 0;
-    transition: all 0.2s ease-in; }
+    background: linear-gradient(70deg, transparent 0%, transparent 50%, white 50%);
+    background-size: 250%;
+    background-position: 0%;
+    animation: information-reveal 1s;
+    animation-delay: .5s;
+    animation-fill-mode: backwards; }
   #information-column::after {
     position: absolute;
     content: "";
     width: 10%;
     background: linear-gradient(to top, white 0%, white 33%, #4cbbd5 33%, #4cbbd5 66%, #227c91 66%, #227c91 100%);
-    height: calc(100% - 1.8rem);
-    top: calc(.8rem);
+    height: calc(100% - 1.65rem);
+    top: calc(.85rem);
     right: -5.5rem;
-    transition: all 0.2s ease-in;
     background-size: contain;
     box-sizing: content-box;
-    box-shadow: 0 0.25rem 0.125rem 0 rgba(0, 0, 0, 0.07); }
+    box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
+    animation: color-bar-reveal .5s;
+    animation-delay: 1s;
+    animation-fill-mode: backwards; }
   #information-column:hover::after {
     background: linear-gradient(to top, white 0%, white 33%, #4cbbd5 33%, #4cbbd5 66%, #227c91 66%, #227c91 100%); }
 
-#social-links:last-child {
-  margin-right: -.6rem; }
+#social-links {
+  font-size: 1.2rem; }
+  #social-links:last-child {
+    margin-right: -.6rem; }
 
-.links ul li {
-  transition: all 0.2s ease-in; }
-  .links ul li a {
-    display: inline-block;
-    padding: .5rem 2rem;
+.links {
+  display: inline-block;
+  background: linear-gradient(-170deg, transparent 0%, transparent 50%, white 50%);
+  background-size: 200% 315%;
+  background-position: 100% 0%;
+  animation: links-reveal .5s 1s;
+  animation-fill-mode: backwards; }
+  .links ul li {
     transition: all 0.2s ease-in; }
-    .links ul li a:hover {
-      transform: translateX(0.3rem);
-      box-shadow: 0 0.25rem 0.125rem 0 rgba(0, 0, 0, 0.07); }
-    .links ul li a.link-1 {
-      background: linear-gradient(70deg, transparent 0%, transparent 50%, #227c91 50%);
-      background-size: 250%; }
-      .links ul li a.link-1:hover {
-        background-position: 100%;
-        color: white; }
-    .links ul li a.link-2 {
-      background: linear-gradient(70deg, transparent 0%, transparent 50%, #4cbbd5 50%);
-      background-size: 250%; }
-      .links ul li a.link-2:hover {
-        background-position: 100%;
-        color: white; }
-    .links ul li a.link-3 {
-      background: linear-gradient(70deg, transparent 0%, transparent 50%, white 50%);
-      background-size: 250%; }
-      .links ul li a.link-3:hover {
-        background-position: 100%; }
+    .links ul li a {
+      display: inline-block;
+      padding: .5rem 2rem;
+      transition: all 0.2s ease-in; }
+      .links ul li a:hover {
+        transform: translateX(0.3rem);
+        box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158); }
+      .links ul li a.link-1 {
+        background: linear-gradient(70deg, transparent 0%, transparent 50%, #227c91 50%);
+        background-size: 250%; }
+        .links ul li a.link-1:hover {
+          background-position: 100%;
+          color: white; }
+      .links ul li a.link-2 {
+        background: linear-gradient(70deg, transparent 0%, transparent 50%, #4cbbd5 50%);
+        background-size: 250%; }
+        .links ul li a.link-2:hover {
+          background-position: 100%;
+          color: white; }
+      .links ul li a.link-3 {
+        background: linear-gradient(70deg, transparent 0%, transparent 50%, white 50%);
+        background-size: 250%; }
+        .links ul li a.link-3:hover {
+          background-position: 100%; }
 
 .is-size-hero {
   font-size: 5rem !important; }
@@ -7555,7 +7571,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   font-family: "Montserrat", sans-serif; }
 
 .tag, .button, #avatar {
-  box-shadow: 0 0.25rem 0.125rem 0 rgba(0, 0, 0, 0.07); }
+  box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158); }
 
 .is-size-huge {
   font-size: 5.5rem; }
@@ -7569,6 +7585,36 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   100% {
     background-position: right bottom; } }
 
+@keyframes information-reveal {
+  0% {
+    background-position: 100%;
+    box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
+    right: 0; }
+  100% {
+    background-position: 0%;
+    box-shadow: none; } }
+
+@keyframes color-bar-reveal {
+  0% {
+    width: 0%;
+    right: -2.4rem;
+    transform: scaleY(1.13); }
+  50% {
+    width: 10%;
+    right: -5.5rem;
+    transform: scaleY(1.13); }
+  70% { }
+  100% {
+    transform: scaleY(1); } }
+
+@keyframes links-reveal {
+  0% {
+    box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
+    background-position: 0% 80%; }
+  100% {
+    box-shadow: none;
+    background-position: 0% 0%; } }
+
 .card {
   border-radius: 6px; }
   .card .card-image .image {
@@ -7576,7 +7622,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     border-top-right-radius: 6px; }
 
 .project-item {
-  box-shadow: 0 0.25rem 0.125rem 0 rgba(0, 0, 0, 0.07);
+  box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
   border-radius: 6px;
   background-color: #175361;
   min-height: fit-content;
