--- a/css/main.css
+++ b/css/main.css
@@ -7491,8 +7491,9 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-blend-mode: soft-light;
   background-size: 150% auto;
   background-position: top left;
-  animation: background-movement 300s ease-out;
-  animation-iteration-count: infinite; }
+  animation: background-movement 260s ease;
+  animation-iteration-count: infinite;
+  animation-delay: 1.5s; }
   #information-column {
     position: relative;
     padding: 0;
@@ -7502,6 +7503,8 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     animation: information-reveal 1s;
     animation-delay: .5s;
     animation-fill-mode: backwards; }
+    #information-column h2 {
+      color: rgba(255, 255, 255, 0.795); }
   #information-column::after {
     position: absolute;
     content: "";
@@ -7511,11 +7514,11 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     top: calc(.85rem);
     right: -5.5rem;
     background-size: contain;
-    box-sizing: content-box;
-    box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
-    animation: color-bar-reveal .5s;
+    box-shadow: 0.18rem 0.18rem 0 0 rgba(0, 0, 0, 0.155);
+    animation: color-bar-reveal 1s;
     animation-delay: 1s;
-    animation-fill-mode: backwards; }
+    animation-fill-mode: backwards;
+    backface-visibility: none; }
   #information-column:hover::after {
     background: linear-gradient(to top, white 0%, white 33%, #4cbbd5 33%, #4cbbd5 66%, #227c91 66%, #227c91 100%); }
 
@@ -7539,7 +7542,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
       transition: all 0.2s ease-in; }
       .links ul li a:hover {
         transform: translateX(0.3rem);
-        box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158); }
+        box-shadow: 0.18rem 0.18rem 0 0 rgba(0, 0, 0, 0.155); }
       .links ul li a.link-1 {
         background: linear-gradient(70deg, transparent 0%, transparent 50%, #227c91 50%);
         background-size: 250%; }
@@ -7571,7 +7574,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   font-family: "Montserrat", sans-serif; }
 
 .tag, .button, #avatar {
-  box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158); }
+  box-shadow: 0.18rem 0.18rem 0 0 rgba(0, 0, 0, 0.155); }
 
 .is-size-huge {
   font-size: 5.5rem; }
@@ -7588,11 +7591,12 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 @keyframes information-reveal {
   0% {
     background-position: 100%;
-    box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
-    right: 0; }
+    box-shadow: 0.18rem 0.18rem 0 0 rgba(0, 0, 0, 0.155); }
+  50% {
+    background-position: 100%;
+    box-shadow: none; }
   100% {
-    background-position: 0%;
-    box-shadow: none; } }
+    background-position: 0%; } }
 
 @keyframes color-bar-reveal {
   0% {
@@ -7603,13 +7607,16 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     width: 10%;
     right: -5.5rem;
     transform: scaleY(1.13); }
-  70% { }
+  70% {
+    transform: scaleY(1); }
+  90% {
+    box-shadow: none; }
   100% {
-    transform: scaleY(1); } }
+    box-shadow: 0.18rem 0.18rem 0 0 rgba(0, 0, 0, 0.155); } }
 
 @keyframes links-reveal {
   0% {
-    box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
+    box-shadow: 0.18rem 0.18rem 0 0 rgba(0, 0, 0, 0.155);
     background-position: 0% 80%; }
   100% {
     box-shadow: none;
@@ -7622,7 +7629,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     border-top-right-radius: 6px; }
 
 .project-item {
-  box-shadow: 0.15rem 0.18rem 0 0 rgba(0, 0, 0, 0.158);
+  box-shadow: 0.18rem 0.18rem 0 0 rgba(0, 0, 0, 0.155);
   border-radius: 6px;
   background-color: #175361;
   min-height: fit-content;
